# docs/swagger.json
@@ -9,6 +9,52 @@
     "host": "localhost:8080",
     "basePath": "/",
     "paths": {
+        "/create": {
+            "post": {
+                "description": "Starts a new Firecracker VM with the provided configuration",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Start a new Firecracker VM",
+                "parameters": [
+                    {
+                        "description": "VM Configuration",
+                        "name": "vmConfig",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/main.VMConfig"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/exec/{machine_id}": {
             "post": {
                 "description": "Executes a command in a running VM",
@@ -42,52 +88,6 @@
                         "description": "Command Output",
                         "schema": {
                             "type": "string"
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "type": "string"
-                        }
-                    }
-                }
-            }
-        },
-        "/start-vm": {
-            "post": {
-                "description": "Starts a new Firecracker VM with the provided configuration",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "summary": "Start a new Firecracker VM",
-                "parameters": [
-                    {
-                        "description": "VM Configuration",
-                        "name": "vmConfig",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/main.VMConfig"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
                         }
                     },
                     "400": {
@@ -144,9 +144,6 @@
                         "guest": {
                             "type": "object",
                             "properties": {
-                                "cpu_kind": {
-                                    "type": "string"
-                                },
                                 "cpus": {
                                     "type": "integer"
                                 },
